RESOLVED FIXED178030
RenderTable should not hold a collection of raw pointers to RenderTableCol
https://bugs.webkit.org/show_bug.cgi?id=178030
Summary RenderTable should not hold a collection of raw pointers to RenderTableCol
alan
Reported 2017-10-06 15:06:46 PDT
m_columnRenderers
Attachments
Patch (3.60 KB, patch)
2017-10-06 15:15 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-06 15:07:12 PDT
alan
Comment 2 2017-10-06 15:15:17 PDT
WebKit Commit Bot
Comment 3 2017-10-06 16:15:35 PDT
Comment on attachment 323052 [details] Patch Clearing flags on attachment: 323052 Committed r223009: <http://trac.webkit.org/changeset/223009>
WebKit Commit Bot
Comment 4 2017-10-06 16:15:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.