RenderTable should not hold a collection of raw pointers to RenderTableCol https://bugs.webkit.org/show_bug.cgi?id=178030 <rdar://problem/34865236>

Reviewed by Simon Fraser.

In addition to the m_columnRenderersValid flag, this patch ensures that
we don't dereference stale column renderers even when the flag is out of sync.

Covered by existing tests.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::updateColumnCache const):
(WebCore::RenderTable::slowColElement const):
* rendering/RenderTable.h:


Canonical link: https://commits.webkit.org/194280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223009 268f45cc-cd09-0410-ab3c-d52691b4dbfc